--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="container">
 			<div class="card-white" id="introduction">
 				<h1>Hello, I'm Marilyn</h1>
-				<img src="images/profile.jpg" class="img-circle" width="100px" alt="Marilyn Zhang">
+				<img src="images/profile.JPG" class="img-circle" width="100px" alt="Marilyn Zhang">
 				<p>
 					I'm interested in the intersection of finance, technology, and media. 
 				</p>
